--- a/packages/css/src/less/variables/_colors.less
+++ b/packages/css/src/less/variables/_colors.less
@@ -48,9 +48,13 @@
   --color-text-positive: var(--color-positive);
   --color-text-negative: var(--color-negative);
   --color-text-warning: var(--color-warning);
-  --color-text-link: var(--color-accent);
-  --color-text-link-hover: @color-base-blue-mid;
-  --color-text-link-active: @color-base-blue-dark;
+  --color-text-link-primary: var(--color-accent);
+  --color-text-link-primary-hover: @color-base-blue-mid;
+  --color-text-link-primary-active: @color-base-blue-dark;
+  --color-text-link-secondary: @color-base-navy-light;
+  --color-text-link-secondary-hover: var(--color-text-link-primary-hover);
+  --color-text-link-secondary-active: var(--color-text-link-primary-active);
+  --color-text-link-disabled: @color-base-smoke-mid;
   --color-text-input: @color-base-navy-mid;
   --color-text-placeholder: @color-base-smoke-dark;
   --color-text-inactive: @color-base-smoke-dark;
